java backend - api classes wip